# ThiyaMediaEngine-Android_playerSDK

./: README.md  build.gradle.kts
binaries/: integration_logic.md  sample_call_logic.txt
docs/: architecture.js
engine/: CMakeLists.txt
engine/src/main/cpp/: GraphicsPipeline.cpp  VulkanRenderer.cpp
engine/src/main/cpp/compute/: LumaChromaImageGeneratorCmp.cpp
engine/src/main/cpp/imgui/: ImSequencer.cpp  imgui_impl_android.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
engine/src/main/include/: Util.h
engine/src/main/include/compute/: ComputeService.h
engine/src/main/shaders/: default_hardware.frag  default_hardware.vert.spv  luma_chroma_gen.comp  luma_chroma_gen.comp.spv
src/main/cpp/: AudioStreamer.cpp  EntryPoint.cpp  MediaDecoder.cpp  VideoProcessor.cpp
src/main/cpp/compute/: ComputeService.cpp
src/main/cpp/imgui/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
src/main/include/: AudioStreamer.h  GraphicsPipeline.h  MediaDecoder.h  VideoProcessor.h  VulkanRenderer.h
src/main/include/compute/: LumaChromaImageGeneratorCmp.h
src/main/include/imgui/: imgui_impl_vulkan.h
src/main/shaders/: compile.bat  default_hardware.frag.spv  default_hardware.vert
